WIP: pg_dump: zstd compression
Previously proposed at: 20201221194924.GI30237@telsasoft.com

note-to-self: see also: private commit 36ab001fb

--- a/src/bin/pg_dump/meson.build
+++ b/src/bin/pg_dump/meson.build
@@ -5,6 +5,7 @@ pg_dump_common_sources = files(
   'compress_io.c',
   'compress_lz4.c',
   'compress_none.c',
+  'compress_zstd.c',
   'dumputils.c',
   'parallel.c',
   'pg_backup_archiver.c',
