--- a/src/backend/executor/Makefile
+++ b/src/backend/executor/Makefile
@@ -18,6 +18,7 @@ OBJS = \
 	execCurrent.o \
 	execExpr.o \
 	execExprInterp.o \
+	execFilters.o \
 	execGrouping.o \
 	execIndexing.o \
 	execJunk.o \
