get rid of xxhash

--- a/src/backend/utils/hash/Makefile
+++ b/src/backend/utils/hash/Makefile
@@ -14,7 +14,6 @@ include $(top_builddir)/src/Makefile.global
 
 OBJS = \
 	dynahash.o \
-	pg_crc.o \
-	xxhash.o
+	pg_crc.o
 
 include $(top_srcdir)/src/backend/common.mk
